spring-back-office/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-back-office-service 
  namespace: default
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080 
  selector:
    name: spring-back-office
